# pycounts_nb

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: conf.py  example.ipynb
src/pycounts_nb/: plotting.py  pycounts_nb.py
